--- a/specs/desktop.toml
+++ b/specs/desktop.toml
@@ -20,6 +20,6 @@ offset = { x = "3440", y = "-300" }
 
 
 [keyboard]
-layouts = "en,ru,by"
+layouts = "us,ru,by"
 variants = ""
 options = "compose:rctrl"
