--- a/home/configs/wlr-which-key/focus.yaml
+++ b/home/configs/wlr-which-key/focus.yaml
@@ -1,11 +1,13 @@
+---
 font: JetBrainsMono Nerd Font 14
-background: "#282828d0"
-color: "#ffffff"
-border: "#7fc8ff"
+background: "#EFF1F5d0"
+color: "#4C4F69"
+border: "#7287FD"
 separator: " ➜ "
 border_width: 3
 corner_r: 2
 padding: 15
+rows_per_column: 8
 column_padding: 25
 
 # One of center, left, right, top, bottom, bottom-left, top-left, etc.
@@ -89,6 +91,27 @@ menu:
     keep_open: true
     desc: Focus the workspace 9
     cmd: niri msg action focus-workspace 9
+
+  - key: ["Alt+m"]
+    keep_open: true
+    desc: Focus the Main workspace
+    cmd: niri msg action focus-workspace "main"
+  - key: ["Alt+w"]
+    keep_open: true
+    desc: Focus the Work workspace
+    cmd: niri msg action focus-workspace "work"
+  - key: ["Alt+g"]
+    keep_open: true
+    desc: Focus the Game workspace
+    cmd: niri msg action focus-workspace "game"
+  - key: ["Alt+s"]
+    keep_open: true
+    desc: Focus the Social workspace
+    cmd: niri msg action focus-workspace "social"
+  - key: ["Alt+i"]
+    keep_open: true
+    desc: Focus the Info workspace
+    cmd: niri msg action focus-workspace "info"
 
   - key: "m"
     desc: Use move mode
