--- a/home/configs/wlr-which-key/move-workspace.yaml
+++ b/home/configs/wlr-which-key/move-workspace.yaml
@@ -1,12 +1,13 @@
-# Theming
+---
 font: JetBrainsMono Nerd Font 14
-background: "#282828d0"
-color: "#ffffff"
-border: "#7fc8ff"
+background: "#EFF1F5d0"
+color: "#4C4F69"
+border: "#7287FD"
 separator: " ➜ "
 border_width: 3
 corner_r: 2
 padding: 15
+rows_per_column: 6
 column_padding: 25
 
 # One of center, left, right, top, bottom, bottom-left, top-left, etc.
@@ -22,21 +23,30 @@ margin_top: 0
 inhibit_compositor_keyboard_shortcuts: true
 
 menu:
-  - key: [Left, h]
+  - key: ["Ctrl+Left", "Ctrl+h"]
     keep_open: true
-    desc: Move the focused column to the monitor to the left
-    cmd: niri msg action move-workspace-left
-  - key: [Right, l]
+    desc: Move the focused workspace to the monitor to the left
+    cmd: niri msg action move-workspace-to-monitor-left
+  - key: ["Ctrl+Right", "Ctrl+l"]
     keep_open: true
-    desc: Move the focused column to the monitor to the right
-    cmd: niri msg action move-workspace-right
+    desc: Move the focused workspace to the monitor to the right
+    cmd: niri msg action move-workspace-to-monitor-right
+  - key: ["Ctrl+Down", "Ctrl+j"]
+    keep_open: true
+    desc: Move the focused workspace to the monitor below
+    cmd: niri msg action move-workspace-to-monitor-down
+  - key: ["Ctrl+Up", "Ctrl+k"]
+    keep_open: true
+    desc: Move the focused workspace to the monitor above
+    cmd: niri msg action move-workspace-to-monitor-up
+
   - key: [Down, j]
     keep_open: true
-    desc: Move the focused column to the monitor below
+    desc: Move the focused workspace down
     cmd: niri msg action move-workspace-down
   - key: [Up, k]
     keep_open: true
-    desc: Move the focused column to the monitor above
+    desc: Move the focused workspace up
     cmd: niri msg action move-workspace-up
 
   - key: ["1"]
