--- a/home/configs/wlr-which-key/resize.yaml
+++ b/home/configs/wlr-which-key/resize.yaml
@@ -1,7 +1,8 @@
+---
 font: JetBrainsMono Nerd Font 14
-background: "#282828d0"
-color: "#ffffff"
-border: "#7fc8ff"
+background: "#EFF1F5d0"
+color: "#4C4F69"
+border: "#7287FD"
 separator: " ➜ "
 border_width: 3
 corner_r: 2
@@ -9,7 +10,7 @@ padding: 15
 column_padding: 25
 
 # One of center, left, right, top, bottom, bottom-left, top-left, etc.
-anchor: bottom 
+anchor: bottom
 # Only relevant when anchor is not center
 margin_right: 0
 margin_bottom: 30
